--- a/index.html
+++ b/index.html
@@ -16,16 +16,14 @@
   <body>
     <div class="container">
       <!-- because skeleton uses the container -->
-      <h1>
-        Number Gusser
-      </h1>
+      <h1>Number Gusser</h1>
       <div id="game">
         <p>
-          Guess a number between <span class="min-num">1</span> and
-          <span class="max-num">10</span>
+          Guess a number between <span class="min-num"></span> and
+          <span class="max-num"></span>
         </p>
         <input type="number" id="guess-input" placeholder="Enter Your Guess" />
-        <input type="submit" value="Submit" id="guess-value" />
+        <input type="submit" value="Submit" id="guess-btn" />
         <p class="message"></p>
         <!-- here we'll be inserting message from our js whether its correct or wrong -->
       </div>
